--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="row flex-lg-row-reverse align-items-center py-3   ">
         <div class="col-10 col-sm-8 col-lg-6">
           <img
-            src="https://media.wired.com/photos/593261cab8eb31692072f129/master/pass/85120553.jpg"
+            src="https://cdn.pixabay.com/photo/2017/12/11/15/34/lion-3012515_960_720.jpg"
             class="d-block mx-lg-auto img-fluid"
             alt="Bootstrap Themes"
             width="700"
@@ -96,7 +96,7 @@
             featuring Sass variables and mixins, responsive grid system,
             extensive prebuilt components, and powerful JavaScript plugins.
           </p>
-          <div id="feature"> 
+          <div > 
             <button type="button" class="btn btn-success  px-4 me-md-2">
               Primary
             </button>
@@ -238,6 +238,21 @@
       <hr />
     </div>
 </div>
+
+<!-- footer -->
+<div class="container">
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4">
+        <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+        <ul class="list-unstyled d-flex">
+          <li class="ms-3"><a class="link-dark" href="https://github.com/reactninjas-fs">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+          </a></li> 
+          <li class="ms-3"><a href="#">Back to top</a></li>
+        </ul>
+      </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
