--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
       </nav> -->
     <div id="home" class="container col-xxl-8 px-4 pt-4 mt-5">
-      <div class="row flex-lg-row-reverse align-items-center py-3   ">
+      <div class="row flex-lg-row-reverse align-items-center py-3  g-5 ">
         <div class="col-10 col-sm-8 col-lg-6">
           <img
             src="https://cdn.pixabay.com/photo/2017/12/11/15/34/lion-3012515_960_720.jpg"
@@ -201,7 +201,7 @@
       <hr />
 
       <div class="row mt-5 mb-5">
-        <div class="col-lg-7 order-md-2">
+        <div class="col-lg-7 order-md-2 g-5">
           <h2 class="fw-normal lh-1">
             Oh yeah, it’s that good.
             <span class="text-muted">See for yourself.</span>
@@ -220,8 +220,8 @@
       <hr />
 
       <div id="contact" class="row mt-5 mb-5">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">
+        <div class="col-md-7 g-5">
+          <h2 class="featurette-heading fw-normal lh-1 " >
             And lastly, this one. <span class="text-muted">Checkmate.</span>
           </h2>
           <p class="lead">
@@ -238,10 +238,24 @@
       <hr />
     </div>
 </div>
+<!-- CONTACT -->
+<div class="bg " id="contact">
+<div class="container   ">
+    <div class="row  h-100">
+        <div class=" d-flex flex-column justify-content-center align-items-center text-center">
+            <div class="contact p-5">
+
+        <h1>Cover Your Page.</h1>
+        <p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    </div>
+    </div>
+    </div>
+</div>
+</div>
 
 <!-- footer -->
 <div class="container">
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4">
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 g-5">
         <p>&copy; 2022 Company, Inc. All rights reserved.</p>
         <ul class="list-unstyled d-flex">
           <li class="ms-3"><a class="link-dark" href="https://github.com/reactninjas-fs">
@@ -249,7 +263,7 @@
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
               </svg>
           </a></li> 
-          <li class="ms-3"><a href="#">Back to top</a></li>
+          <li class="ms-3"><a class="fw-bold fst-italic" href="#" style="text-decoration:none ;">Back to top</a></li>
         </ul>
       </div>
     </div>
